fixed issue with wrapping on long resource detail popup urls

--- a/Web/css/booked.css
+++ b/Web/css/booked.css
@@ -931,9 +931,6 @@ a.toggle-sidebar {
   padding: 10px 5px;
   float: left;
   max-width: 400px;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
 }
 #resourceDetailsPopup .resourceImage {
   max-width: 200px;
