--- a/Web/css/less/resource-details.less
+++ b/Web/css/less/resource-details.less
@@ -29,9 +29,6 @@
   padding: 10px 5px;
   float: left;
   max-width: 400px;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
 }
 
 #resourceDetailsPopup .resourceImage {
